# squirrel

./: README.md
android/Squirrel/: settings.gradle.kts
android/Squirrel/app/: build.gradle.kts
android/Squirrel/app/release/: output-metadata.json
android/Squirrel/app/release/baselineProfiles/0/: app-release.dm
android/Squirrel/app/release/baselineProfiles/1/: app-release.dm
android/Squirrel/app/src/main/: AndroidManifest.xml
android/Squirrel/app/src/main/assets/xml/: GetCapabilities  GetDNS  GetDeviceInformation  GetNetworkDefaultGateway  GetNetworkInterfaces  GetOSDs  GetProfiles  GetServices  GetStreamUri  GetSystemDateAndTime  GetUsers  SetDNS  SetDiscoveryMode  SetNetworkDefaultGateway  SetNetworkInterfaces  SetOSD  SetPTZ  SetSystemDateAndTime  SetUser  Stop  WsDiscovery
android/Squirrel/app/src/main/res/color/: radio_color.xml  switch_color.xml
android/Squirrel/app/src/main/res/drawable/: app_icon.xml  app_start_background.xml  custom_progress.xml  custom_progress_bar.xml  custom_scrollbar_vertical.xml  custom_thumb.xml  fo.xml  image_about_blue.xml  (+58 more)
android/Squirrel/gradle/: libs.versions.toml
android/Squirrel/gradle/wrapper/: gradle-wrapper.properties
esp32/socke-esp32/: CMakeLists.txt
esp32/socke-esp32/components/esp_tinyusb/: Kconfig
esp32/socke-esp32/components/virtualServer/: CMakeLists.txt
esp32/socke-esp32/components/virtualServer/include/: virtualServer.h
esp32/socke-esp32/components/virtualServer/src/: udpSocket.c  usbHid.c  wifiInit.c
esp32/socke-esp32/main/: CMakeLists.txt  main.c
java/squirrelServer_java/: pom.xml
(+54 files in other folders)
